# render

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO_PLAN.md  imgui.ini
src/: main.cpp
src/app/: application.cpp  application.h  cuda_path_tracing_renderer.cpp  cuda_path_tracing_renderer.h  gpu_resources.cpp  gpu_resources.h  main.cpp  renderer.h  renderer_base.h  shader.cpp  shader.h  ui.cpp  ui.h  window.cpp  window.h  wireframe_renderer.cpp  wireframe_renderer.h
src/bvh/: bvh.cpp  bvh.h
src/gpu/: gpu_resources.cpp  intersect.cu  intersect.h  path_tracer.cu  path_tracer.h  path_tracer_old.h  ray.h
src/renderer/: cuda_path_tracing_renderer.cpp  cuda_path_tracing_renderer.h  hitRecord.h  intersect.cu  intersect.h  path_tracer.cu  path_tracer.h  pt_utils.cu  pt_utils.h  wireframe_renderer.cpp  wireframe_renderer.h
src/scene/: camera.cpp  camera.h  model.cpp  model.h  ray.h  scene.cpp  scene.h  shape.h  shape_backup.h
src/shaders/: texture.frag  wireframe.vert
src/struct/: bvhNodeGpu.h  materialGpu.h  matirial.h  matirialPod.h  modelGpu.h  ray.h  shape.h  shapeGpu.h
